Solved the overlapping ambiguity

--- a/styles/style.css
+++ b/styles/style.css
@@ -21,25 +21,21 @@ html{
 /* styling background  */
 .background{
     width: 100%;
-    height: 100vh;
-    background: radial-gradient( at 100px 100px,transparent 90%,rgba(0, 0, 0,1.5) 300%);
+    height: 100%;
     box-shadow: inset 0px 50px 400px black;
-    object-fit: fill;
     display:flex;
+    background-image: url('/assets/NetflixBackground.jpg');
+    background-repeat: no-repeat;
+    background-position:top;
     flex-direction: column;
     justify-content:space-between;
 }
 
-/* background image */
-#background-image{
-    position:absolute;
-    filter:brightness(50%) ;
-    z-index:-1;
-    object-fit:cover;
-    object-position: 0px -20px;
-    width: inherit;
-    height: inherit;
-    overflow: hidden;
+.background-filter{
+    height:100%;
+    width:100%;
+    background: radial-gradient( at 100px 100px,transparent 90%,rgba(0, 0, 0,1.5) 300%);
+
 }
 
 
@@ -75,8 +71,8 @@ header{
 /* styling logo */
 
 #NetflixLogo{
-    width:148px;
-    height:40px;
+    width:9.25rem;
+    height:2.5rem;
     
 }
 
@@ -85,7 +81,7 @@ header{
 
 .nav{
 width:70vw;
-height:38px;
+height:2.4rem;
 display:inline flex;
 justify-content: end;
 align-items: center;
@@ -264,7 +260,6 @@ nav{
     width:inherit;
     height:100px;
     overflow:hidden;
-   
 }
 
 
@@ -313,8 +308,8 @@ nav{
 /* styling lower section  */
 .lower-section{
     width:100%;
-    min-height:100vh;
-    padding:0px 22vh;
+    min-height:60rem;
+    padding:0px 10%;
     display:flex;
     flex-wrap: column;
     flex-direction: column;
